--- a/christmas2023/dad.html
+++ b/christmas2023/dad.html
@@ -73,7 +73,7 @@ function draw() {
     // ctx.fontFamily = 'Segoe UI, sans-serif';
     ctx.font = '48px Segoe UI, sans-serif';
     ctx.fillText('Merry Christmas Dad and Jill', 500, 350);
-    ctx.fillText('You won't believe this one weird thing Robert Oppehneimer did next...', 500, 450);
+    ctx.fillText('You won/'t believe this one weird thing Robert Oppehneimer did next...', 500, 450);
     for(var i = 0; i < snows.length; i++) {
         snows[i].update();
     }
